--- a/Portfolio Page/mystyle.css
+++ b/Portfolio Page/mystyle.css
@@ -286,3 +286,48 @@ margin-left: 9%;
   background-color: #f1f1f1;
   text-align: center;
 }
+
+
+/* SPECIAL FOR GAME PAGE */
+
+.game{
+  display: flex;
+
+  justify-content:space-around;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+  border: 3px solid white;
+  padding: 10px;
+  background-color: rgba(0,0,0,0.0);
+}
+
+.game-button{
+  background-color: rgba(0,0,0,0.0);
+    padding: 6px;
+    font-size: 16px;
+    border: 4px solid #ffffff !important;
+    color: white;
+
+    text-decoration: none;
+    font-size: 17px;
+
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+.game-button:hover{
+  background-color: #ddd !important;
+
+}
+
+#attack-button:hover{
+  cursor:crosshair;
+}
+
+#restart-button:hover{
+  cursor:pointer;
+}
+h3{
+  text-align: center;
+}
