--- a/DrumMachineApp/stylesheet.css
+++ b/DrumMachineApp/stylesheet.css
@@ -2,6 +2,11 @@ body{
     text-align: center;
     font-family: 'Saira', sans-serif;
     background-color: aliceblue;
+    position: relative;
+}
+
+h1{
+  font-size: 90px;
 }
 
 
@@ -30,4 +35,105 @@ body{
   }
   .cell:nth-child(3n) {
     
+  }
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(16, 52, 151, 0.589);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: mediumseagreen;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px rgba(16, 52, 151, 0.589);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  #toggleButton{
+    position: fixed;
+    bottom: 0;
+    left: 40%;
+  }
+
+  #volume-bar{
+    position: fixed;
+    bottom: 2px;
+    width: 200px;
+    left: 49.5%;
+  }
+
+  .slidecontainer {
+    width: 100%;
+  }
+  
+  .volumeSlider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .volumeSlider:hover {
+    opacity: 1;
+  }
+  
+  .volumeSlider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: rgba(16, 52, 151, 0.589);
+    cursor: pointer;
+  }
+  
+  .volumeSlider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: rgba(16, 52, 151, 0.589);
+    cursor: pointer;
   }
