--- a/html/style.css
+++ b/html/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('background.jpg');
+    background-image: url('background.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -34,7 +34,7 @@ h1{
     border: 3px solid beige;
     border-radius: 2%;
     
-    background-color: black;
+    /* background-color: black; */
     
 }
 
@@ -119,7 +119,9 @@ h1{
 
 #LOGO{
     margin: auto;
-    content: url(LOGO.gif);
+    content: url(LOGO.png);
+    width: 450px;
+    /* height: 50px; */
 }
 
 #menu{
@@ -128,22 +130,24 @@ h1{
 }
 
 .menu-buttons {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     width: 200px;
-    opacity: 90%;
-    border-radius: 20%;
-    background-color:firebrick; /* Green */
+    opacity: 80%;
+    border-radius: 0%;
+    background-color:rgb(251, 194, 107);
+    
     border: none;
-    color: white;
+    color: rgb(56, 34, 1);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    border: 3px solid rgb(73, 14, 14);
+    border: 1px solid rgb(97, 70, 31);
   }
 
-  .menu-buttons:hover{
-    background-color:rgb(180, 77, 77);
+  .menu-buttons:active{
+    background-color:rgb(255, 176, 57);
     cursor: pointer;
   }
 
@@ -171,7 +175,8 @@ h1{
 
 #SHOP-LOGO{
     margin: auto;
-    content: url(shop-logo.gif);
+    content: url(shop-logo.png);
+
 }
 
 #coin-display{
