--- a/html/style.css
+++ b/html/style.css
@@ -40,12 +40,12 @@ h1{
 }
 
 #character {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height:90px;
     content: url(deni_push_red.gif);
     /* background-color: red; */
     position: relative;
-    top: 300px;
+    top: 310px;
 
 }
 
@@ -56,7 +56,7 @@ h1{
 
 @keyframes jump {
     0% {
-        top: 300px;
+        top:  310px;
     }
 
     30% {
@@ -68,14 +68,14 @@ h1{
     }
 
     100% {
-        top: 300px;
+        top:  310px;
     }
 }
 
 #block {
-    width: 50px;
-    height: 40px;
-    content: url(block1.png);
+    width: 80px;
+    height: 45px;
+    content: url(block1.gif);
     position: relative;
     top: 260px;
     left: 960px;
@@ -132,10 +132,11 @@ h1{
 
 .menu-buttons {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 200px;
+    width: 250px;
+    height: 60px;
     opacity: 80%;
     border-radius: 0%;
-    background-color:rgb(251, 194, 107);
+    background-color:rgb(64, 102, 21);
     
     border: none;
     color: rgb(56, 34, 1);
@@ -148,14 +149,14 @@ h1{
   }
 
   .menu-buttons:active{
-    background-color:rgb(255, 176, 57);
+    background-color:rgb(97, 175, 33);
     cursor: pointer;
   }
 
 
   #coin {
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 60px;
     content: url(coin.gif);
     position: relative;
     top: 100px;
@@ -176,11 +177,11 @@ h1{
 
 
 #flying-block {
-    width: 40px;
-    height: 40px;
+    width: 100px;
+    height: 100px;
     content: url(flying.png);
     position: relative;
-    top: 100px;
+    top: 80px;
     left: 960px;
     animation: block 3.5s infinite linear;
     display: none;
