--- a/pixi/style.css
+++ b/pixi/style.css
@@ -1,3 +1,11 @@
 body{
     text-align:center;
+    background-color:#232b2b;
+    color: rgb(221, 215, 215)
+}
+
+#name{
+    
+    position:fixed;
+    bottom: 0;
 }
