--- a/react-project-planner/src/App.css
+++ b/react-project-planner/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.task-subcontainer{
+  display:flex;
+  justify-content: space-between;
+}
+
 #card-container{
   display: flex;
   flex-wrap: wrap;
